Website for package new
Basic stuff without much content

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 
 
-<title>nboot</title>
+<title>About Bootstrap</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -289,28 +289,66 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">nboot</h1>
+<h1 class="title toc-ignore">About Bootstrap</h1>
 
 </div>
 
 
-<div id="welcome-to-the-nboot-package" class="section level2">
-<h2>Welcome to the nboot Package</h2>
-<p>This R-package was designed for researchers and practioners using statistical methods on small samples. Often, bootstrap statistics can provide convenient solutions to small sample problems, however, in some cases they are either hard to set up or computationally complex (at least regarding computation time). Furthermore, one may not spend time on reading how to actually implement a bootstrap version for a specific method.</p>
-<p>nboot offers a range of methods in a bootstrapped versions, each offering different bootstrap methods to choose from. Also, the number of bootstrap iterations can be chosen. Computations are mostly done in C++ using the Rcpp integration for R, granting high speed and precision.</p>
-<p>The current version of the package is 0.3.0.</p>
+<p>Some information about resampling and bootstrap</p>
+<div id="what-is-the-idea-of-resampling" class="section level2">
+<h2>What is the Idea of Resampling?</h2>
+<div id="basic-idea" class="section level3">
+<h3>Basic Idea</h3>
+<p>Bla bla bla insert here</p>
 </div>
-<div id="installing-the-package" class="section level2">
-<h2>Installing the Package</h2>
-<p>Currently, there is no version available on CRAN. To download and install the Package, make sure you have the latest versions of R, Rtools and devtools. If you are using a windows machine, please make sure Rtools is installed and up-to-date: <a href="https://cran.r-project.org/bin/windows/Rtools/history.html">Rtools on CRAN</a></p>
-<p>Install the package by using <code>devtools::install_github("spruenke/nboot")</code>.</p>
+<div id="advantages-and-disadvantages" class="section level3">
+<h3>Advantages and Disadvantages</h3>
+<p>Pro and Cons</p>
 </div>
-<div id="section" class="section level2">
-<h2></h2>
 </div>
-<div id="issues" class="section level2">
-<h2>Issues</h2>
-<p>If you have any issue with the package or it’s functions, please contact to me directly at twitter (<a href="https://twitter.com/erin_hub">@erin_hub</a>)</p>
+<div id="a-brief-history-of-bootstrap" class="section level2">
+<h2>A Brief History of Bootstrap</h2>
+<p>Efron and Wu and so on and the Jackknife</p>
+</div>
+<div id="methodology-and-terminology" class="section level2">
+<h2>Methodology and Terminology</h2>
+<p>Insert some formulas here</p>
+<hr />
+</div>
+<div id="references" class="section level2 unnumbered">
+<h2>References</h2>
+<div id="refs" class="references">
+<div id="ref-boot5">
+<p>Bathke, A. et al. (2018). Testing mean differences among groups: Multivariate and repeated measures analysis with minimal assumptions. <em>Multivariate Behavioral Research</em>, <em>53</em>, 384–359.</p>
+</div>
+<div id="ref-wboot2">
+<p>Davidson, R., &amp; Flachaire, E. (2008). The wild bootstrap, tamed at last. <em>Journal of Econometrics</em>, <em>146</em>, 162–169.</p>
+</div>
+<div id="ref-boot1">
+<p>Efron, B. (1979). Bootstrap methods: Another look at the jackknife. <em>The Annals of Statistics</em>, <em>7</em>, 1–26.</p>
+</div>
+<div id="ref-boot2">
+<p>Friedrich, S. et al. (2017). A wild bootstrap approach for nonparametric repeated measurements. <em>Computational Statistics &amp; Data Analysis</em>, <em>113</em>, 38–52.</p>
+</div>
+<div id="ref-boot4">
+<p>Konietschke, F., &amp; Pauly, M. (2014). Bootstrapping and permuting paired t-test type statistics. <em>Statistics and Computing</em>, <em>24</em>, 283–296.</p>
+</div>
+<div id="ref-boot8">
+<p>Mammen, E. (1992). Bootstrap, wild bootstrap and asymptotic normality. <em>Probability Theory and Related Fields</em>, <em>93</em>, 439–455.</p>
+</div>
+<div id="ref-boot7">
+<p>Politis, D. N., &amp; Romano, J. P. (1994). Large sample confidence regions based on subsamples under minimal assumptions. <em>The Annals of Statistics</em>, <em>22</em>, 2031–2050.</p>
+</div>
+<div id="ref-boot6">
+<p>Prášková, Z. (2002). Bootstrap in nonstationary autoregression. <em>Kybernetika</em>, <em>38</em>, 389–404.</p>
+</div>
+<div id="ref-boot3">
+<p>Umlauft, M. et al. (2019). Wild bootstrapping rank-based procedures: Multiple testing in nonparametric factorial repeated measures designs. <em>Journal of Multivariate Analysis</em>, <em>171</em>, 176–192.</p>
+</div>
+<div id="ref-wboot1">
+<p>Wu, C. F. J. (1986). Jackknife, bootstrap and other resampling methods in regression analysis. <em>Annals of Statistics</em>, <em>14</em>, 1261–1295.</p>
+</div>
+</div>
 </div>
 
 
