--- a/about.html
+++ b/about.html
@@ -338,10 +338,7 @@ $(document).ready(function () {
 <div id="permutation" class="section level3">
 <h3>Permutation</h3>
 <hr />
-</div>
-</div>
-<div id="references" class="section level2 unnumbered">
-<h2>References</h2>
+<p>(TO BE UPDATED!) ## References</p>
 <div id="refs" class="references">
 <div id="ref-boot5">
 <p>Bathke, A. et al. (2018). Testing mean differences among groups: Multivariate and repeated measures analysis with minimal assumptions. <em>Multivariate Behavioral Research</em>, <em>53</em>, 384–359.</p>
@@ -372,6 +369,7 @@ $(document).ready(function () {
 </div>
 <div id="ref-wboot1">
 <p>Wu, C. F. J. (1986). Jackknife, bootstrap and other resampling methods in regression analysis. <em>Annals of Statistics</em>, <em>14</em>, 1261–1295.</p>
+</div>
 </div>
 </div>
 </div>
@@ -416,7 +414,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "site_libs/mathjax-local/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
