--- a/applic.html
+++ b/applic.html
@@ -310,9 +310,7 @@ $(document).ready(function () {
 <h3>Pre-Clinical Studies</h3>
 <p>See Konietschke et al. (…)</p>
 <hr />
-</div>
-<div id="references" class="section level3 unnumbered">
-<h3>References</h3>
+<p>(TO BE UPDATED!) ### References</p>
 <div id="refs" class="references">
 <div id="ref-boot5">
 <p>Bathke, A. et al. (2018). Testing mean differences among groups: Multivariate and repeated measures analysis with minimal assumptions. <em>Multivariate Behavioral Research</em>, <em>53</em>, 384–359.</p>
@@ -387,7 +385,7 @@ $(document).ready(function () {
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    script.src  = "site_libs/mathjax-local/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
+    script.src  = "https://mathjax.rstudio.com/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML";
     document.getElementsByTagName("head")[0].appendChild(script);
   })();
 </script>
