--- a/applic.html
+++ b/applic.html
@@ -330,35 +330,35 @@ $(document).ready(function () {
 </div>
 
 
-<p>Hereby, I want to provide some nice examples of bootstrap and resampling applications. Some of them will be from real papers and research issues, whereas others will be exemplary to demonstrate it’s properties.</p>
+<p>Here, I want to provide some nice examples of bootstrap and resampling applications.</p>
 <div id="portfolio-analysis---asset-allocation" class="section level3">
 <h3>Portfolio Analysis - Asset Allocation</h3>
-<p>See Petukhina and Sprünken (2021)(a) and Petukhina and Sprünken (2021)(b)</p>
+<p><span class="citation">Petukhina &amp; Sprünken (2021)</span> propose a semi-parametric resampling technique to compute optimal CVaR portfolios under uncertainty.</p>
 </div>
 <div id="bagging-and-random-forests" class="section level3">
 <h3>Bagging and Random Forests</h3>
-<p>See Breiman (…)</p>
+<p><span class="citation">Breiman (1996)</span> studies the bootstrap aggregation of predictors and estimators. This is the foundation of random forests, which are presented in <span class="citation">Breiman (2001)</span>.</p>
 </div>
 <div id="pre-clinical-studies" class="section level3">
 <h3>Pre-Clinical Studies</h3>
-<p>See Konietschke et al. (…)</p>
+<p><span class="citation">Konietschke &amp; Pauly (2014)</span>, <span class="citation">Friedrich et al. (2017)</span>, <span class="citation">Bathke et al. (2018)</span> and <span class="citation">Umlauft et al. (2019)</span> conduct methodological studies of bootstrap- and resampling-based techniques to enhance classical statistics for small-sample problems in the context of translational studies.</p>
+</div>
+<div id="econometrics" class="section level3">
+<h3>Econometrics</h3>
+<p><span class="citation">Politis &amp; Romano (1994)</span> present a bootstrap for stationary timeseries, which is very useful for econometrics, where timeseries play a very important role.</p>
 <hr />
-<p>(TO BE UPDATED!) ### References</p>
+</div>
+<div id="references" class="section level3 unnumbered">
+<h3 class="unnumbered">References</h3>
 <div id="refs" class="references csl-bib-body hanging-indent" line-spacing="2">
 <div id="ref-boot5" class="csl-entry">
 Bathke, A. et al. (2018). Testing mean differences among groups: Multivariate and repeated measures analysis with minimal assumptions. <em>Multivariate Behavioral Research</em>, <em>53</em>, 384–359.
 </div>
-<div id="ref-boot8" class="csl-entry">
-Beran, R. (1982). Estimated sampling distributions: The bootstrap and competitors. <em>The Annals of Statistics</em>, <em>10</em>, 212–225.
+<div id="ref-bag1" class="csl-entry">
+Breiman, L. (1996). Bagging predictors. <em>Machine Learning</em>, <em>24</em>, 123–140.
 </div>
-<div id="ref-boot8" class="csl-entry">
-Beran, R. (1982). Estimated sampling distributions: The bootstrap and competitors. <em>The Annals of Statistics</em>, <em>10</em>, 212–225.
-</div>
-<div id="ref-wboot2" class="csl-entry">
-Davidson, R., &amp; Flachaire, E. (2008). The wild bootstrap, tamed at last. <em>Journal of Econometrics</em>, <em>146</em>, 162–169.
-</div>
-<div id="ref-boot1" class="csl-entry">
-Efron, B. (1979). Bootstrap methods: Another look at the jackknife. <em>The Annals of Statistics</em>, <em>7</em>, 1–26.
+<div id="ref-randfor1" class="csl-entry">
+Breiman, L. (2001). Random forests. <em>Machine Learning</em>, <em>45</em>, 5–32.
 </div>
 <div id="ref-boot2" class="csl-entry">
 Friedrich, S. et al. (2017). A wild bootstrap approach for nonparametric repeated measurements. <em>Computational Statistics &amp; Data Analysis</em>, <em>113</em>, 38–52.
@@ -366,17 +366,14 @@ Friedrich, S. et al. (2017). A wild bootstrap approach for nonparametric repeate
 <div id="ref-boot4" class="csl-entry">
 Konietschke, F., &amp; Pauly, M. (2014). Bootstrapping and permuting paired t-test type statistics. <em>Statistics and Computing</em>, <em>24</em>, 283–296.
 </div>
+<div id="ref-port1" class="csl-entry">
+Petukhina, A., &amp; Sprünken, E. (2021). Evaluation of multi-asset investment strategies with digital assets. <em>Digital Finance</em>.
+</div>
 <div id="ref-boot7" class="csl-entry">
 Politis, D. N., &amp; Romano, J. P. (1994). Large sample confidence regions based on subsamples under minimal assumptions. <em>The Annals of Statistics</em>, <em>22</em>, 2031–2050.
 </div>
-<div id="ref-boot6" class="csl-entry">
-Prášková, Z. (2002). Bootstrap in nonstationary autoregression. <em>Kybernetika</em>, <em>38</em>, 389–404.
-</div>
 <div id="ref-boot3" class="csl-entry">
 Umlauft, M. et al. (2019). Wild bootstrapping rank-based procedures: Multiple testing in nonparametric factorial repeated measures designs. <em>Journal of Multivariate Analysis</em>, <em>171</em>, 176–192.
-</div>
-<div id="ref-wboot1" class="csl-entry">
-Wu, C. F. J. (1986). Jackknife, bootstrap and other resampling methods in regression analysis. <em>Annals of Statistics</em>, <em>14</em>, 1261–1295.
 </div>
 </div>
 </div>
