--- a/applic.html
+++ b/applic.html
@@ -367,7 +367,7 @@ Friedrich, S. et al. (2017). A wild bootstrap approach for nonparametric repeate
 Konietschke, F., &amp; Pauly, M. (2014). Bootstrapping and permuting paired t-test type statistics. <em>Statistics and Computing</em>, <em>24</em>, 283–296.
 </div>
 <div id="ref-port1" class="csl-entry">
-Petukhina, A., &amp; Sprünken, E. (2021). Evaluation of multi-asset investment strategies with digital assets. <em>Digital Finance</em>.
+Petukhina, A., &amp; Sprünken, E. (2021). Evaluation of multi-asset investment strategies with digital assets. <em>Digital Finance</em>, <em>3</em>, 45–79.
 </div>
 <div id="ref-boot7" class="csl-entry">
 Politis, D. N., &amp; Romano, J. P. (1994). Large sample confidence regions based on subsamples under minimal assumptions. <em>The Annals of Statistics</em>, <em>22</em>, 2031–2050.
